--- a/scss/shared/_variablesAndMixins.scss
+++ b/scss/shared/_variablesAndMixins.scss
@@ -14,6 +14,8 @@ $nathanWhite: #FAFAFA;
 
 //Viewport Widths (Desktop)
 $width60px: 4.6875vw;
+$width240px: 18.75vw;
+$width440px: 34.375vw;
 
 //Viewport Heights (Desktop)
 $height45px: 6.42857143vh;
