--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,6 +104,13 @@ header{
         bottom: $height60px;
     }
 
+    #artworkCanvas{
+        width: 100%;
+        height: 100%;
+        // background: chartreuse;
+        position: relative;
+    }
+
 }
 
 .commercialRightContainer{
