--- a/scss/shared/_variablesAndMixins.scss
+++ b/scss/shared/_variablesAndMixins.scss
@@ -13,11 +13,18 @@ $nathanWhite: #FAFAFA;
 
 
 //Viewport Widths (Desktop)
+///////////////////////////
 $width60px: 4.6875vw;
+//Vertical
 $width240px: 18.75vw;
+$width360px: 28.125vw;
+//Horizontal
+$width293px: 22.9164062vw;
 $width440px: 34.375vw;
 
+
 //Viewport Heights (Desktop)
+////////////////////////////
 $height45px: 6.42857143vh;
 $height60px: 8.571142867vh;
 
