--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,7 @@
 
 body{
     font-size: 10px;
+    cursor:  url(../imgs/moveMe.png), auto;
 
     a{
         text-decoration: none;
@@ -42,7 +43,7 @@ header{
         line-height: 30px;
         color: $nathanBlack;
         //position
-        position: absolute;
+        position: fixed;
         left: $width60px;
         top: $height45px;
         z-index: 1000;
@@ -53,7 +54,7 @@ header{
         @include homeLinks;
         text-align: right;
         //position
-        position: absolute;
+        position: fixed;
         right: $width60px;
         top: $height45px;
         transform: translateY( 5px ); //difference between fonts divided by 2: (30 - 20) / 2 
@@ -62,98 +63,44 @@ header{
 
 }
 
+@import './home/_home.scss';
 
 
-.artworkLeftContainer{
-
-    //dimension
-    width: 50vw;
+.projectContainer {
+    background: $nathanWhite;
+    position: sticky;
+    top: 0;
+    width: 100vw;
     height: 100vh;
-    //position
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-
-    .artworkImage{
-        //position
+    img{
         position: absolute;
-        left: 50%;
-        top: 49%;
+        left: 50vw;
+        top: 50vh;
         transform: translate(-50%, -50%);
     }
-
     .horizontal{
-        //dimensions
-        width: $width440px;
+        width: 48.4375vw;
     }
-
     .vertical{
-        //dimensions
-        width: $width240px;
+        width: 25vw;
     }
-
-    .link{
+    h2{
         //text
-        @include homeLinks;
-        text-align: center;
+        font-family: $feniceStack;
+        font-size: $font20;
+        color: $nathanBlack;
+        line-height: 20px;
         //position
         position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: $height60px;
+        bottom: 50px;
+        left: $width60px;
     }
-
-    #artworkCanvas{
-        width: 100%;
-        height: 99%;
-        // background: chartreuse;
-        position: relative;
-    }
-
 }
 
-.commercialRightContainer{
+.odd{
+    background: $nathanWhite;
+}
 
-    //dimesions
-    width: 50vw;
-    height: 100vh;
-    //position
-    position: absolute;
-    right: 0;
-    bottom: 0;
-
-    .commercialImage{
-        //position
-        position: absolute;
-        left: 50%;
-        top: 49%;
-        transform: translate(-50%, -50%);
-    }
-
-    .horizontal{
-        //dimensions
-        width: $width440px;
-        height: $width293px;
-        object-fit: cover;
-    }
-
-    .vertical{
-        //dimensions
-        width: $width240px;
-        height: $width360px;
-        object-fit: cover;
-    }
-
-    .link{
-        //text
-        @include homeLinks;
-        text-align: center;
-        //position
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: $height60px;
-    }
-
+.even{
+    background: #FFF;
 }
